# rust-geometry

./: Cargo.toml
.devcontainer/: devcontainer.json
benches/: matrix_bench.rs
src/lib/: matrix.rs
