[package]
name = "rust_geometry_crate"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_geometry"
path = "src/lib/lib.rs"
bench = false

[[bin]]
name = "rust_geometry"
path = "src/bin.rs"
bench = false

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "matrix_bench"
harness = false

[dependencies]
